--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "sweetalert2": "^11.6.15",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
