--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "pinia": "^2.0.28",
     "sweetalert2": "^11.6.15",
+    "swiper": "^8.4.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
