--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "pinia": "^2.0.28",
     "sweetalert2": "^11.6.15",
     "swiper": "^8.4.5",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
