--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.10.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "pinia": "^2.0.28",
+    "remixicon": "^2.5.0",
     "sweetalert2": "^11.6.16",
     "swiper": "^8.4.5",
     "vee-validate": "^4.7.3",
