--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.10.0",
+    "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
@@ -19,6 +20,7 @@
     "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
